--- a/src/scss/partials/_main-article.scss
+++ b/src/scss/partials/_main-article.scss
@@ -107,11 +107,11 @@
                     content: "";
                     background: $color-primary;
                     border-radius: 99em;
-                    width: calc(100%+#{$unit});
                     position: absolute;
-                    left: -$unit;
-                    bottom: 10%;
-                    height: 40%;
+                    left: 0;
+                    bottom: 4px;
+                    height: 8px;
+                    width: 108%;
                     z-index: -1;
                 }
             }
@@ -123,8 +123,8 @@
             display: flex;
             flex-wrap: wrap;
             align-items: flex-start;
-            justify-content: space-between;
-            max-width: 584px;
+            justify-content: flex-start;
+            max-width: 608px;
             margin-left: auto;
             margin-right: auto;
         }
@@ -133,6 +133,8 @@
             @include bp(sm) {
                 flex: 0 0 calc(50% - #{2*$unit});
                 margin-top: 0;
+                margin-right: 2 * $unit;
+                margin-left: 0;
             }
 
 
