--- a/src/scss/partials/_variables.scss
+++ b/src/scss/partials/_variables.scss
@@ -52,8 +52,7 @@ $gradient-dark: linear-gradient(135deg, $color-grayscale 0%, rgba($color-graysca
 $gradient-button: linear-gradient(135deg, $color-secondary-purple 0%, $color-secondary-blue--light 100%);
 
 // padding
-$padding-button: 24px 32px 22px;
-$padding-button--focus: 23px 31px 21px;
+$padding-button: 15px 32px;
 
 // transitions
 $easing: cubic-bezier(.75, .25, .6, .9);
